# ViOdFeatExt

./: .gitignore  README.md  stereoCalibration.yml
Datasets/: .gitignore  README.md
Datasets/RoboticArmMovements_251118/: IA_251118_114653_linear_2point.csv  IA_251118_115858_linear_side_2point.csv  IA_251118_120835_linear_moon_2point.csv  IA_251118_121811_square_moon_4point.csv  IA_251118_122708_tilt_90deg_2point.csv  LOG251118_114653.txt  LOG251118_115858.txt  LOG251118_120835.txt  LOG251118_121811.txt  LOG251118_122708.txt
Firmware/: .gitignore  CMakeLists.txt  README.md  project_build.sh
Firmware/Capture/: CMakeLists.txt  CaptureDevice.cpp  CaptureDevice.h  DataStorageHandler.cpp  DataStorageHandler.h  ThreadSafeQueue.h
Firmware/DataProcessing/: CMakeLists.txt  Calibration.cpp  Calibration.h  ProcessData.cpp  ProcessData.h
Firmware/I2C/: CMakeLists.txt
Firmware/ICM20948/: CMakeLists.txt  icm20948.cpp  icm20948.h
Firmware/Tests_Visualization/: CMakeLists.txt  test_viz.cpp
Firmware/Visualization/: CMakeLists.txt  Prerequisits.txt  VisualizationHelper.cpp  VisualizationHelper.h
Firmware/tests/: CMakeLists.txt  approximationCalibration.cpp  cam_test.cpp  capture_test.cpp  checkboard_calibration.cpp  depth_test.cpp  fast_test.cpp  imu_3d_test.cpp  imu_3d_test.py  imu_test.cpp  keypoint_tracker_test.cpp  notes.txt  sift_time_test.cpp  stereoCamMultiThreadedTest.cpp  webcamMultiThreadedTest.cpp
Firmware/tests/tests/: test_capture_device  test_fast_time  test_full_capture  test_imu  test_sift_time  test_stereocamMT  test_webcamMT
Hardware/: UM2_cable_protector.gcode  attacher.SLDPRT
LogData/11111/: data.csv
LogData/1234/: data.csv
LogData/Test/: data.csv
LogData/adasda/: data.csv
